ggplot2 1.0.1.9xxx
----------------------------------------------------------------

* ggplot2 re-exports grid `arrow()` and `unit()` so you don't need to attach
  grid or use `grid::` for these commonly used functions (#1225)

* `geom_histogram()` and `geom_smooth()` now only inform you about the
  default values once per layer, rather than once per panel (#1220).

* `geom_bar()` and `geom_histogram()` no longer share `stat_bin()`. Now
  `geom_bar()` has its own stat, `stat_bar()`. This is useful if you want to
  display a bar chart of continuous data, drawing a bar at each unique
  location.

* `stat_summary2d()` has been renamed to `stat_summary_2d()` (with
  an alias so you can keep using the old method).

* Date and datetime scales now have `date_breaks`, `date_minor_breaks` and
  `date_labels` arguments so that you never need to use the long form
  `scales::date_breaks()` or `scales::date_format()`.

* `aes_auto()` has been deprecated. `aes_()` added as alias to old `aes_q()`.
  `aes_()` can now use formulas, so the most concise SE version of
  `aes(carat, price)` is now `aes_(~carat, ~price)`.

* New dataset `economics_long` is the economics data in long form.

* `facet_wrap()` gains a `labeller` option. (@lionel-, #25)

* The labeller API has been updated to offer more control when
  facetting over multiple factors (e.g. with formulae such as `~cyl +
  am`). Before, a labeller function would take `variable` and `value`
  arguments and return a character vector. Now, they take a data frame
  of character vectors and return a list. The input data frame has one
  column per factor facetted over. Each column in the returned list
  becomes one line in the strip label. See documentation for more
  details. Labellers offer the `multi_line` argument to control
  whether to display one or multiple lines. Furthermore, referring to
  `x` in backquoted expressions with `label_bquote()` is
  deprecated. You can now refer to the variable names
  instead. (@lionel-)
