@@ -16,7 +16,7 @@ guide_axis <- function(at, labels, position="right", theme) {
 
   at <- unit(at, "native")
   length <- theme$axis.ticks.length
-  label_pos <- length + theme$axis.ticks.margin
+  label_pos <- length
 
   nticks <- length(at)
 
@@ -51,9 +51,9 @@ guide_axis <- function(at, labels, position="right", theme) {
 
   labels <- switch(position,
     top = ,
-    bottom = element_render(theme, label_render, labels, x = label_x),
+    bottom = element_render(theme, label_render, labels, x = label_x, expand_y = TRUE),
     right = ,
-    left =  element_render(theme, label_render, labels, y = label_y))
+    left =  element_render(theme, label_render, labels, y = label_y, expand_x = TRUE))
 
   line <- switch(position,
     top =    element_render(theme, "axis.line.x", c(0, 1), c(0, 0), id.lengths = 2),
