@@ -72,7 +72,7 @@ save_vtest("text is element_blank - result is no text")
 
 # Testing specific elements
 p + theme(axis.text = element_blank(), axis.ticks = element_blank(),
-          axis.title = element_blank(), axis.ticks.margin = unit(0, "cm"),
+          axis.title = element_blank(),
           plot.background = element_rect(fill = "lightblue"),
           panel.border = element_rect(colour = "black", size = 4, fill = NA))
 save_vtest("many blank items, and light blue plot background")
